# ryadm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  build.rs  radm.1  ryadm.1  yadm  yadm.1
.github/: copilot-instructions.md
.github/workflows/: test.yml
completion/: README.md
completion/bash/: radm  ryadm
completion/fish/: radm.fish  ryadm.fish
completion/zsh/: _radm  _ryadm
src/: alt.rs  config.rs  context.rs  encrypt.rs  exclude.rs  git.rs  hooks.rs  main.rs  os.rs  paths.rs  privdirs.rs  template.rs  template_default.rs  util.rs
src/cmd/: clone.rs  enter.rs  init.rs  misc.rs  mod.rs  upgrade.rs
test/: test_alt.py
tests/: compat_yadm.rs  test_alt.rs  test_encryption.rs  test_hooks_paths.rs  test_perms_private.rs  test_repo_cmds.rs  test_simple_cmds.rs  test_spawn_budget.rs  test_template.rs
tests/common/: mod.rs
